Bug 931041 - Bring back floating scrollbars in the editor. r=anton, r=paul
UltraBlame original commit: fbea5638ad490041c2e78ce0229952fc4f77b7f0

--- a/browser/devtools/sourceeditor/codemirror/mozilla.css
+++ b/browser/devtools/sourceeditor/codemirror/mozilla.css
@@ -38,3 +38,19 @@
 .error-line {
   background: rgba(255,0,0,0.2);
 }
+
+
+
+
+
+.CodeMirror-hscrollbar {
+  min-height: 10px;
+}
+
+
+
+
+
+.CodeMirror-vscrollbar {
+  min-width: 10px;
+}
